Cleaned Up Tags

--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
             4th, 5th, and 6th critical failures while landing on a drone ship.
           </li>
           <li>
-            <strong
-              >In the end, Elon Musk mastered the art of failing successfully.
+            <strong>
+              In the end, Elon Musk mastered the art of failing successfully.
               His net worth has been recorded in the past as $14.8 billion, who
-              knows where his success will lead.</strong
-            >
+              knows where his success will lead.
+            </strong>
           </li>
         </ul>
       </div>
@@ -116,7 +116,8 @@
             id="tribute-link"
             href="https://en.wikipedia.org/wiki/Elon_Musk"
             target="_blank"
-            >here
+          >
+            here
           </a>
         </h2>
       </div>
